--- a/wwr/index.html
+++ b/wwr/index.html
@@ -49,10 +49,10 @@
             <h3>Home Page</h3>
           </div>
           
-          <article class="home-message">
-            <p>
-              Considered one of the finest single-day white water adventures worldwide, no trip to this remarkable destination would be complete without truly immersing oneself in the awe-inspiring beauty of the river flowing from its source.
-            </p>
+          <article>
+              <p>
+                Considered one of the finest single-day white water adventures worldwide, no trip to this remarkable destination would be complete without truly immersing oneself in the awe-inspiring beauty of the river flowing from its source.
+              </p>
           </article>
         </div>
 
